[package]
name = "gen-epub-book"
description = "Generate an ePub book from a simple plaintext descriptor"
repository = "https://github.com/nabijaczleweli/gen-epub-book.rs"
readme = "README.md"
keywords = ["generate", "ePub", "ebook", "e-book", "book"]
categories = ["encoding", "text-processing"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in gen-epub-book.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
lazy_static = "0.2"
mime_guess = "1.8"
reqwest = "0.4"
chrono = "0.3"
regex = "0.2"
clap = "2.20"
url = "1.4"
zip = "0.2"

[dependencies.uuid]
version = "0.4"
features = ["v4"]


[[bin]]
name = "gen-epub-book"
test = false
doc = false
